fix styles and fonts - added z-index for input[type=range]-thumb, - cleaned fonts/

--- a/task_11/css/style.css
+++ b/task_11/css/style.css
@@ -184,6 +184,8 @@ input[type="range"]::-webkit-slider-thumb {
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -6px;
+    position: relative;
+    z-index: 2;
 }
 
 input[type=range]::-moz-range-thumb {
@@ -193,6 +195,8 @@ input[type=range]::-moz-range-thumb {
     border-radius: 22px;
     background: #edbe76;
     cursor: pointer;
+    position: relative;
+    z-index: 2;
 }
 
 input[type=range]::-ms-thumb {
@@ -202,6 +206,8 @@ input[type=range]::-ms-thumb {
     border-radius: 22px;
     background: #edbe76;
     cursor: pointer;
+    position: relative;
+    z-index: 2;
 }
 
 input[type="range"]::before {
